# Bazel-Multi-Language-Starter

./: .bazelrc  .gitignore  MODULE.bazel  go.mod  go.sum
go_app/: BUILD.bazel
go_app/src/: main.go
java_app/: BUILD.bazel
java_app/src/main/java/com/example/: Greeting.java
java_deps/: maven_install.json
java_maven_app/: BUILD.bazel
java_maven_app/src/main/java/com/example/: AppWithDeps.java
java_oci_image/: BUILD.bazel
java_oci_image/src/main/java/com/example/image/: App.java
java_proto_app/: BUILD.bazel
java_proto_app/src/main/java/com/example/proto/: BufferedInputFile.java  BufferedOutputFile.java  Greeter.java  ParquetHelper.java
proto/: BUILD.bazel  greeter.proto  thing.proto
python_app/: BUILD.bazel
python_app/src/: main.py
python_deps/: requirements.txt
python_grpc_app/: BUILD.bazel
python_grpc_app/src/: main.py
python_oci_image/: BUILD.bazel
