module(repo_name = "bazel_starter")

bazel_dep(name = "rules_jvm_external", version = "6.2")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "java_deps",
    artifacts = [
        "org.apache.commons:commons-lang3:jar:3.12.0",
    ],
    lock_file = "//:java_deps/maven_install.json",
)

use_repo(maven, "java_deps")


bazel_dep(name = "rules_python", version = "0.34.0")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.toolchain(python_version = "3.11", is_default = True)


pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "python_pip_deps",
    python_version = "3.11",
    requirements_lock = "//:python_deps/requirements.txt",
)

use_repo(pip, "python_pip_deps")


bazel_dep(name = "rules_go", version = "0.49.0")
bazel_dep(name = "gazelle", version = "0.37.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.21.8")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "io_rsc_quote",
)

bazel_dep(name = "protobuf", version = "27.2")
bazel_dep(name = "rules_proto_grpc_java", version = "5.0.0")
bazel_dep(name = "rules_proto_grpc_python", version = "5.0.0")


bazel_dep(name = "rules_oci", version = "1.7.5")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "python_11_base_image",
    image = "docker.io/library/python:3.11.9-slim",
    platforms = [
        "linux/arm64/v8",
        "linux/amd64",
    ],
)
use_repo(oci, "python_11_base_image")


bazel_dep(name = "aspect_bazel_lib", version = "2.7.9")
bazel_dep(name = "platforms", version = "0.0.10")
