load("@rules_go//go:def.bzl", "go_binary")
load("@rules_proto_grpc_go//:defs.bzl", "go_proto_library")

go_binary(
    name = "go_app",
    srcs = ["src/main.go"],
    deps = [
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//utilities:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//connectivity:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//grpclog:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@com_github_golang_glog//:go_default_library",
    ]
)


go_proto_library(
    name = "greeter_go_proto_lib",
#    compilers = [
#        "@rules_go//proto:go_grpc",
#        "@com_github_grpc_ecosystem_grpc_gateway//protoc-gen-grpc-gateway:go_gen_grpc_gateway",  # keep
#    ],
    importpath = "examples.proto",
    protos = [
        "//proto:greeter_proto",
        "//proto:thing_proto",
    ],
    deps = [
        "@googleapis//google/api:annotations_go_proto",
        "@org_golang_google_protobuf//types/descriptorpb"
    ],
)