load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_jvm_external//:defs.bzl", "artifact")


package(default_visibility = ["//visibility:public"])

java_binary(
    name = "java_app_with_deps_binary",
    main_class = "com.example.AppWithDeps",
    srcs = glob(["src/main/java/com/example/*.java"]),
    deps = [
        artifact("com.google.guava:guava"),
    ]
)
