load("@rules_java//java:defs.bzl", "java_binary")


package(default_visibility = ["//visibility:public"])

java_binary(
    name = "java_app_with_deps_binary",
    main_class = "com.example.AppWithDeps",
    srcs = glob(["src/main/java/com/example/*.java"]),
    deps = [
        "@java_deps//:com_google_guava_guava"
    ]
)
