load("@rules_proto_grpc_java//:defs.bzl", "java_grpc_library")
load("@rules_java//java:defs.bzl", "java_binary")

package(default_visibility = ["//visibility:public"])


java_grpc_library(
    name = "thing_java_grpc",
    protos = ["//proto:thing_proto"],
)

java_grpc_library(
    name = "greeter_java_grpc",
    protos = ["//proto:greeter_grpc"],
    deps = ["thing_java_grpc"],
)

java_binary(
    name = "java_app_with_grpc_binary",
    main_class = "com.example.proto.Greeter",
    srcs = glob(["src/main/java/com/example/proto/*.java"]),
    deps = [
        ":greeter_java_grpc"
    ]
)
