load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "thing_proto",
    srcs = ["thing.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@protobuf//:any_proto",
    ],
)

proto_library(
    name = "greeter_proto",
    srcs = [
        "greeter.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":thing_proto",  # Non well-known
        "@protobuf//:any_proto",  # Well-known
        "@protobuf//:descriptor_proto",  # Well-known
        "@googleapis//google/api:annotations_proto",
    ],
    exports = [
        ":thing_proto",  # Non well-known
        "@protobuf//:any_proto",  # Well-known
        "@googleapis//google/api:annotations_proto",
    ]
)
